crates/python_parser/tests/snapshots/invalid_syntax@ann_assign_stmt_invalid_target.py.snap
---
source: crates/python_parser/tests/fixtures.rs
input_file: crates/python_parser/resources/inline/err/ann_assign_stmt_invalid_target.py
---
## AST

```
Module(
    ModModule {
        range: 0..170,
        body: [
            AnnAssign(
                AnnAssignStmt {
                    range: 0..18,
                    target: StringLiteral(
                        StringLiteralExpr {
                            range: 0..5,
                            value: StringLiteralValue {
                                inner: Single(
                                    StringLiteral {
                                        range: 0..5,
                                        value: "abc",
                                        flags: StringLiteralFlags {
                                            prefix: Empty,
                                            triple_quoted: false,
                                        },
                                    },
                                ),
                            },
                        },
                    ),
                    annotation: Name(
                        NameExpr {
                            range: 7..10,
                            id: Name("str"),
                            ctx: Load,
                        },
                    ),
                    value: Some(
                        StringLiteral(
                            StringLiteralExpr {
                                range: 13..18,
                                value: StringLiteralValue {
                                    inner: Single(
                                        StringLiteral {
                                            range: 13..18,
                                            value: "def",
                                            flags: StringLiteralFlags {
                                                prefix: Empty,
                                                triple_quoted: false,
                                            },
                                        },
                                    ),
                                },
                            },
                        ),
                    ),
                    simple: false,
                },
            ),
            AnnAssign(
                AnnAssignStmt {
                    range: 19..37,
                    target: Call(
                        CallExpr {
                            range: 19..25,
                            func: Name(
                                NameExpr {
                                    range: 19..23,
                                    id: Name("call"),
                                    ctx: Load,
                                },
                            ),
                            arguments: Arguments {
                                range: 23..25,
                                args: [],
                                keywords: [],
                            },
                        },
                    ),
                    annotation: Name(
                        NameExpr {
                            range: 27..30,
                            id: Name("str"),
                            ctx: Load,
                        },
                    ),
                    value: Some(
                        StringLiteral(
                            StringLiteralExpr {
                                range: 33..37,
                                value: StringLiteralValue {
                                    inner: Single(
                                        StringLiteral {
                                            range: 33..37,
                                            value: "no",
                                            flags: StringLiteralFlags {
                                                prefix: Empty,
                                                triple_quoted: false,
                                            },
                                        },
                                    ),
                                },
                            },
                        ),
                    ),
                    simple: false,
                },
            ),
            AnnAssign(
                AnnAssignStmt {
                    range: 38..52,
                    target: Starred(
                        StarredExpr {
                            range: 38..40,
                            value: Name(
                                NameExpr {
                                    range: 39..40,
                                    id: Name("x"),
                                    ctx: Store,
                                },
                            ),
                            ctx: Store,
                        },
                    ),
                    annotation: Name(
                        NameExpr {
                            range: 42..45,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                    value: Some(
                        Tuple(
                            TupleExpr {
                                range: 48..52,
                                elts: [
                                    NumberLiteral(
                                        NumberLiteralExpr {
                                            range: 48..49,
                                            value: Int(
                                                1,
                                            ),
                                        },
                                    ),
                                    NumberLiteral(
                                        NumberLiteralExpr {
                                            range: 51..52,
                                            value: Int(
                                                2,
                                            ),
                                        },
                                    ),
                                ],
                                ctx: Load,
                                parenthesized: false,
                            },
                        ),
                    ),
                    simple: false,
                },
            ),
            AnnAssign(
                AnnAssignStmt {
                    range: 72..83,
                    target: Tuple(
                        TupleExpr {
                            range: 72..74,
                            elts: [
                                Name(
                                    NameExpr {
                                        range: 72..73,
                                        id: Name("x"),
                                        ctx: Store,
                                    },
                                ),
                            ],
                            ctx: Store,
                            parenthesized: false,
                        },
                    ),
                    annotation: Name(
                        NameExpr {
                            range: 76..79,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                    value: Some(
                        NumberLiteral(
                            NumberLiteralExpr {
                                range: 82..83,
                                value: Int(
                                    1,
                                ),
                            },
                        ),
                    ),
                    simple: false,
                },
            ),
            AnnAssign(
                AnnAssignStmt {
                    range: 84..100,
                    target: Tuple(
                        TupleExpr {
                            range: 84..88,
                            elts: [
                                Name(
                                    NameExpr {
                                        range: 84..85,
                                        id: Name("x"),
                                        ctx: Store,
                                    },
                                ),
                                Name(
                                    NameExpr {
                                        range: 87..88,
                                        id: Name("y"),
                                        ctx: Store,
                                    },
                                ),
                            ],
                            ctx: Store,
                            parenthesized: false,
                        },
                    ),
                    annotation: Name(
                        NameExpr {
                            range: 90..93,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                    value: Some(
                        Tuple(
                            TupleExpr {
                                range: 96..100,
                                elts: [
                                    NumberLiteral(
                                        NumberLiteralExpr {
                                            range: 96..97,
                                            value: Int(
                                                1,
                                            ),
                                        },
                                    ),
                                    NumberLiteral(
                                        NumberLiteralExpr {
                                            range: 99..100,
                                            value: Int(
                                                2,
                                            ),
                                        },
                                    ),
                                ],
                                ctx: Load,
                                parenthesized: false,
                            },
                        ),
                    ),
                    simple: false,
                },
            ),
            AnnAssign(
                AnnAssignStmt {
                    range: 101..119,
                    target: Tuple(
                        TupleExpr {
                            range: 101..107,
                            elts: [
                                Name(
                                    NameExpr {
                                        range: 102..103,
                                        id: Name("x"),
                                        ctx: Store,
                                    },
                                ),
                                Name(
                                    NameExpr {
                                        range: 105..106,
                                        id: Name("y"),
                                        ctx: Store,
                                    },
                                ),
                            ],
                            ctx: Store,
                            parenthesized: true,
                        },
                    ),
                    annotation: Name(
                        NameExpr {
                            range: 109..112,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                    value: Some(
                        Tuple(
                            TupleExpr {
                                range: 115..119,
                                elts: [
                                    NumberLiteral(
                                        NumberLiteralExpr {
                                            range: 115..116,
                                            value: Int(
                                                1,
                                            ),
                                        },
                                    ),
                                    NumberLiteral(
                                        NumberLiteralExpr {
                                            range: 118..119,
                                            value: Int(
                                                2,
                                            ),
                                        },
                                    ),
                                ],
                                ctx: Load,
                                parenthesized: false,
                            },
                        ),
                    ),
                    simple: false,
                },
            ),
            AnnAssign(
                AnnAssignStmt {
                    range: 138..150,
                    target: List(
                        ListExpr {
                            range: 138..141,
                            elts: [
                                Name(
                                    NameExpr {
                                        range: 139..140,
                                        id: Name("x"),
                                        ctx: Store,
                                    },
                                ),
                            ],
                            ctx: Store,
                        },
                    ),
                    annotation: Name(
                        NameExpr {
                            range: 143..146,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                    value: Some(
                        NumberLiteral(
                            NumberLiteralExpr {
                                range: 149..150,
                                value: Int(
                                    1,
                                ),
                            },
                        ),
                    ),
                    simple: false,
                },
            ),
            AnnAssign(
                AnnAssignStmt {
                    range: 151..169,
                    target: List(
                        ListExpr {
                            range: 151..157,
                            elts: [
                                Name(
                                    NameExpr {
                                        range: 152..153,
                                        id: Name("x"),
                                        ctx: Store,
                                    },
                                ),
                                Name(
                                    NameExpr {
                                        range: 155..156,
                                        id: Name("y"),
                                        ctx: Store,
                                    },
                                ),
                            ],
                            ctx: Store,
                        },
                    ),
                    annotation: Name(
                        NameExpr {
                            range: 159..162,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                    value: Some(
                        Tuple(
                            TupleExpr {
                                range: 165..169,
                                elts: [
                                    NumberLiteral(
                                        NumberLiteralExpr {
                                            range: 165..166,
                                            value: Int(
                                                1,
                                            ),
                                        },
                                    ),
                                    NumberLiteral(
                                        NumberLiteralExpr {
                                            range: 168..169,
                                            value: Int(
                                                2,
                                            ),
                                        },
                                    ),
                                ],
                                ctx: Load,
                                parenthesized: false,
                            },
                        ),
                    ),
                    simple: false,
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | "abc": str = "def"
  | ^^^^^ Syntax Error: Invalid annotated assignment target
2 | call(): str = "no"
3 | *x: int = 1, 2
  |


  |
1 | "abc": str = "def"
2 | call(): str = "no"
  | ^^^^^^ Syntax Error: Invalid annotated assignment target
3 | *x: int = 1, 2
4 | # Tuple assignment
  |


  |
1 | "abc": str = "def"
2 | call(): str = "no"
3 | *x: int = 1, 2
  | ^^ Syntax Error: Invalid annotated assignment target
4 | # Tuple assignment
5 | x,: int = 1
  |


  |
3 | *x: int = 1, 2
4 | # Tuple assignment
5 | x,: int = 1
  | ^^ Syntax Error: Only single target (not tuple) can be annotated
6 | x, y: int = 1, 2
7 | (x, y): int = 1, 2
  |


  |
4 | # Tuple assignment
5 | x,: int = 1
6 | x, y: int = 1, 2
  | ^^^^ Syntax Error: Only single target (not tuple) can be annotated
7 | (x, y): int = 1, 2
8 | # List assignment
  |


  |
5 | x,: int = 1
6 | x, y: int = 1, 2
7 | (x, y): int = 1, 2
  | ^^^^^^ Syntax Error: Only single target (not tuple) can be annotated
8 | # List assignment
9 | [x]: int = 1
  |


   |
 7 | (x, y): int = 1, 2
 8 | # List assignment
 9 | [x]: int = 1
   | ^^^ Syntax Error: Only single target (not list) can be annotated
10 | [x, y]: int = 1, 2
   |


   |
 8 | # List assignment
 9 | [x]: int = 1
10 | [x, y]: int = 1, 2
   | ^^^^^^ Syntax Error: Only single target (not list) can be annotated
   |
