crates/python_parser/tests/snapshots/invalid_syntax@ann_assign_stmt_type_alias_annotation.py.snap
---
source: crates/python_parser/tests/fixtures.rs
input_file: crates/python_parser/resources/inline/err/ann_assign_stmt_type_alias_annotation.py
---
## AST

```
Module(
    ModModule {
        range: 0..37,
        body: [
            AnnAssign(
                AnnAssignStmt {
                    range: 0..7,
                    target: Name(
                        NameExpr {
                            range: 0..1,
                            id: Name("a"),
                            ctx: Store,
                        },
                    ),
                    annotation: Name(
                        NameExpr {
                            range: 3..7,
                            id: Name("type"),
                            ctx: Load,
                        },
                    ),
                    value: None,
                    simple: true,
                },
            ),
            Assign(
                AssignStmt {
                    range: 8..15,
                    targets: [
                        Name(
                            NameExpr {
                                range: 8..9,
                                id: Name("X"),
                                ctx: Store,
                            },
                        ),
                    ],
                    value: Name(
                        NameExpr {
                            range: 12..15,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 16..28,
                    value: Lambda(
                        LambdaExpr {
                            range: 16..28,
                            parameters: None,
                            body: Name(
                                NameExpr {
                                    range: 24..28,
                                    id: Name("type"),
                                    ctx: Load,
                                },
                            ),
                        },
                    ),
                },
            ),
            Assign(
                AssignStmt {
                    range: 29..36,
                    targets: [
                        Name(
                            NameExpr {
                                range: 29..30,
                                id: Name("X"),
                                ctx: Store,
                            },
                        ),
                    ],
                    value: Name(
                        NameExpr {
                            range: 33..36,
                            id: Name("int"),
                            ctx: Load,
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | a: type X = int
  |         ^ Syntax Error: Simple statements must be separated by newlines or semicolons
2 | lambda: type X = int
  |


  |
1 | a: type X = int
2 | lambda: type X = int
  |              ^ Syntax Error: Simple statements must be separated by newlines or semicolons
  |
